# RAGES

./: .gitignore  RAGES_PLUS_DEV_PLAN.md  README.md  pyproject.toml  rages_v1.txt
src/: parameters.py  rages.py  rages_parser.py  rages_q.py  rages_sampling.py  rages_scoring.py  utils.py  wyp_predictor.py
src/dataset_generation/: annotation.py  dataset_pargen.py  dataset_pargen_lang.py  dataset_validation.py  gpt_prompting.py  traj_classifier.py
src/dynamics/: METAKERN.tm  dynamics_rot.py  dynamics_trans.py  dynamics_trans_hifi.py  mean_to_osc.py
src/dynamics/constants/: __init__.py  _get_gm.py  _get_radii.py  _get_sma.py  time.py
src/dynamics/data/: GGM05G.gfc
src/optimization/: impulsiveSIP.py  impulsive_control.py  optimization.py  optimization_cvxpygen.py  optimization_timedilation.py  parameters.py  scvx.py  utils.py
work/: analysis_parser.py  analysis_q.py  analysis_rages.py  analysis_rages_bseq.py  analysis_wyp_vs_random.py  datagen_q.py  datagen_reasoning.py  datagen_wyp.py  parse_intent_to_ir.py  parser_eval_data.py  train_q.py  train_reasoning_model.py  train_wyp_predictor.py
work/notebook/: plot_art_ws_analysis.ipynb  plot_dataset_general.ipynb  plot_rages_analysis.ipynb  plot_wyp_gen_analysis.ipynb  test_rages.ipynb  test_wyp_data.ipynb  test_wyp_inference.ipynb
