[project]
name = "rages"
version = "0.1.0"
description = ""
authors = [{ name = "Yuji Takubo" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26.4,<2",
    "Mosek>=10.1.28,<11",
    "cvxpy>=1.6.2,<2",
    "scipy>=1.13.0,<2",
    "matplotlib>=3.8.4,<4",
    "tqdm>=4.66.2,<5",
    "torch>=2.1.1,<3",
    "torchvision>=0.16.1,<0.17",
    "torchaudio>=2.1.1,<3",
    "transformers==4.38.2",
    "accelerate>=0.29.3,<0.30",
    "pyqt5>=5.15.11,<6",
    "ipympl>=0.9.6,<0.10",
    "scikit-learn>=1.6.1,<2",
    "xgboost-cpu>=3.0.1,<4",
    "spacetrack>=1.4.0,<2",
    "pandas>=2.3.2,<3",
    "seaborn>=0.13.2,<0.14",
    "openai>=2.2.0,<3",
    "python-dotenv>=1.1.1,<2",
    "clarabel>=0.11.1,<0.12",
    "peft==0.13.2",
    "spiceypy>=8.0.2,<9",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1,<2",
    "ipykernel>=6.29.5,<7",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
dev-mode-dirs = ["src", "work"]
only-include = ["src", "work"]
sources = ["src", "work"]
